ncc/testsuite/negative/refout.n
using Nemerle.IO;

module A {

  f (x : ref int) : void // E: cannot store.*in closure
  {
    def g () {
      x = x + 3;
    };
    g ();
    g ();
  }

  id<T> (x : T) : T { x }

  Main () : void
  {
    def _g (_ : ref int) { };    // E: ref/out .*not supported
    mutable x = 3;
    def _ = id (ref x);         // E: argument #1 was passed as ref/out
    ()
  }
}
